# fIappy-one-hackathon-matrix-solana

./: .env.example  .gitignore  Anchor.toml  README.md  build-and-deploy.sh  initialize-program.js  package-lock.json  package.json  server.js  setup-wsl.sh  solana-helpers.js
backend/: app.py  requirements.txt
flappy.one-react/: .env.example  .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.js
flappy.one-react/src/: App.jsx  main.jsx
flappy.one-react/src/audio/: SfxManager.js
flappy.one-react/src/background/: environment.js  game.js
flappy.one-react/src/components/: AnimatedSprite.jsx  CashOutModal.css  CashOutModal.jsx  CashoutScreen.css  CashoutScreen.jsx  CrateRevealOverlay.css  CrateRevealOverlay.jsx  DeathScreen.css  DeathScreen.jsx  DemoOverlay.css  DemoOverlay.jsx  GameCanvas.css  GameCanvas.jsx  GameHUD.css  GameHUD.jsx  LeaderboardView.jsx  MainMenu.css  MainMenu.jsx  (+9 more)
programs/flappy_one/: Cargo.toml
programs/flappy_one/src/: lib.rs
public/: index.html
risk/: ArciumClient.js  CashoutGate.js  DeviceToken.js  PairTracker.js  PlayerAnomalyTracker.js  ProximityScanner.js  RiskEngineInterface.js  config.js  dashboard.html  index.js  riskLogger.js
supabase/migrations/: 001_cashout_authorizations.sql  002_social_analytics.sql  003_social_total_winnings_from_cashouts.sql  004_demo_onboarding.sql  005_demo_onboarding_idempotent_complete.sql  006_demo_voucher_mint.sql  007_voucher_mint_metadata_and_locking.sql  008_risk_events.sql  009_fix_login_streaks_unique.sql  010_wallet_cashouts.sql  011_event_log.sql
(+20 files in other folders)
