[package]
name = "flappy-one"
version = "0.1.0"
description = "Flappy.one — PDA vault + session + server-authorized cashout"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flappy_one"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
